# CodeSamples

./: README.md  README.md~
Cpp/EvaluateEquations/: CMakeLists.txt  Readme.txt  Readme.txt~  input.txt  input_new.txt  input_original.txt  main
Cpp/EvaluateEquations/include/: TCC.h  TCC.h~
Cpp/EvaluateEquations/src/: TCC.cpp  TCC.cpp~  main.cpp  main.cpp~
Cpp/Fetch/: fib  fib.cpp  mines.cpp
Cpp/KnightBoard/: CMakeLists.txt  Readme.txt:  Readme.txt:~  exec.sh  main
Cpp/KnightBoard/include/: KnightBoard.h  KnightBoard.h~
Cpp/KnightBoard/input/: test1_kb.txt  test2_kb.txt  test3_kb.txt
Cpp/KnightBoard/output/: out_level1.txt  out_level2.txt  out_level3.txt  out_level4.txt  out_level5.txt
Cpp/KnightBoard/src/: KnightBoard.cpp  KnightBoard.cpp~  main.cpp  main.cpp~
Cpp/PlanningLearningExecution/Assignment_1/: .GamePlay.cpp.swp  .GamePlay.h.swp  .main.cpp.swp  GamePlay.cpp  GamePlay.h  Readme.txt  main  main.cpp  problem_file_a_p27.txt  problem_file_b1.txt  problem_file_b2.txt  (+5 more)
Cpp/Quad2DNav/: a.out  main.cpp  output.txt  sim.h
Cpp/RosNetworking/: CMakeLists.txt  package.xml
Perl/: grt_report.txt  oreo.yml  oreo_mega_stuf-pose-K-3-3-3.yml  read_yaml.pl
Ros/APC/stowage_identification/: CMakeLists.txt  network-setup.bash  package.xml
Ros/APC/stowage_identification/launch/: setup.launch
Ros/APC/stowage_identification/models/: cheezit_segmented.pcd  mounting_frame.STL  pod_modified.pcd  pod_modified.xyz
Ros/APC/stowage_identification/scripts/: .GlobPred.py.swo  .stowage_perception_server.py.swp  global_prediction_output.txt  json_exporter.py
Ros/APC/stowage_identification/scripts/perception/: id_object.py  test_identification.py
Ros/APC/stowage_identification/scripts/perception/utils/: caffe_utils.py  get_test_data.py
Ros/APC/stowage_identification/src/: preprocess_id_image.cpp  ros_perception.cpp
Ros/RosNetworking/: environment_loader_laptopB.txt
(+408 files in other folders)
